@@ -17,12 +17,14 @@ import org.mockito.Captor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.http.MediaType;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MockMvc;
+import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
@@ -33,10 +35,11 @@ import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
 import static org.awaitility.Awaitility.await;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.verify;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -49,13 +52,49 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 public class UserApplicationTests {
 
     @Container
-    private static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:17");
+    public static GenericContainer<?> redisContainer =
+            new GenericContainer<>("redis:7.2-alpine")
+                    .withExposedPorts(6379);
+
+    @Autowired
+    private RedisTemplate<String, String> redisTemplate;
 
     @Container
-    private static final KafkaContainer kafka = new KafkaContainer(DockerImageName.parse("apache/kafka:3.7.0"));
+    public static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:17");
+
+    @Container
+    public static final KafkaContainer kafka = new KafkaContainer(DockerImageName.parse("apache/kafka:3.7.0"));
 
     @Autowired
     MockMvc mockMvc;
+
+    // Динамически подставляем параметры подключения
+    @DynamicPropertySource
+    static void redisProperties(DynamicPropertyRegistry registry) {
+        registry.add("spring.data.redis.host", () -> "localhost");
+        registry.add("spring.data.redis.port", () -> redisContainer.getMappedPort(6379));
+        registry.add("spring.datasource.url", postgres::getJdbcUrl);
+        registry.add("spring.datasource.username", postgres::getUsername);
+        registry.add("spring.datasource.password", postgres::getPassword);
+        registry.add("spring.kafka.bootstrap-servers", kafka::getBootstrapServers);
+    }
+
+    @BeforeEach
+    void cleanRedis() {
+        // Очистка через RedisTemplate
+        redisTemplate.getConnectionFactory()
+                .getConnection()
+                .serverCommands()
+                .flushAll();
+        courseUserRepository.deleteAll();
+        userRepository.deleteAll();
+    }
+
+    @DynamicPropertySource
+    static void kafkaProperties(DynamicPropertyRegistry registry) {
+        registry.add("spring.kafka.consumer.group-id",
+                () -> "group-" + UUID.randomUUID());
+    }
 
     @Autowired
     private UserRepository userRepository;
@@ -71,22 +110,6 @@ public class UserApplicationTests {
 
     @Captor
     private ArgumentCaptor<String> messageCaptor;
-
-    @DynamicPropertySource
-    static void configureProperties(DynamicPropertyRegistry registry) {
-        registry.add("spring.datasource.url", postgres::getJdbcUrl);
-        registry.add("spring.datasource.username", postgres::getUsername);
-        registry.add("spring.datasource.password", postgres::getPassword);
-        registry.add("spring.kafka.bootstrap-servers", kafka::getBootstrapServers);
-    }
-
-    @BeforeEach
-    public void setUp() {
-        // Очищаем таблицы перед каждым тестом
-        courseUserRepository.deleteAll(); // Очищаем таблицу CourseUser
-        userRepository.deleteAll(); // Очищаем таблицу Users
-    }
-
 
     @DisplayName("Создание пользователя")
     @Test
@@ -166,8 +189,9 @@ public class UserApplicationTests {
                 .andExpect(status().isOk());
 
         List<CourseUser> courseUsers = courseUserRepository.findAll();
-        assertEquals(1, courseUsers.get(0).getUserId());
-        assertEquals(52, courseUsers.get(0).getCourseId());
+        assertFalse(courseUsers.isEmpty());
+        assertEquals(1, courseUsers.getFirst().getUserId());
+        assertEquals(52, courseUsers.getFirst().getCourseId());
     }
 
     @DisplayName("Получение сообщения из KafkaConsumer")
